--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "git+https://github.com/jonbri/goatlang.git"
   },
   "scripts": {
-    "run": "./bin/run.sh",
-    "release": "./bin/release.sh"
+    "go:start": "./bin/run.sh",
+    "go:version": "./bin/version.sh",
+    "go:release": "./bin/release.sh"
   },
   "license": "MIT",
   "bin": {
