--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Golang
         run: |
           curl -OL https://golang.org/dl/go1.16.7.linux-amd64.tar.gz
-          tar -C /usr/local -xvf go1.16.7.linux-amd64.tar.gz
+          sudo tar -C /usr/local -xvf go1.16.7.linux-amd64.tar.gz
           export PATH=/usr/local/go/bin:$PATH
           go version
       - name: Install gotagger
