--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "git+https://github.com/jonbri/goatlang.git"
   },
   "scripts": {
+    "start": "node index.js",
     "go:start": "./bin/run.sh",
     "go:version": "./bin/version.sh",
     "go:release": "./bin/release.sh"
