fix: on-main -> review

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,12 +1,12 @@
-name: OnMain
+name: Review
 on:
   push:
     branches:
       - 'main'
   workflow_dispatch:
 jobs:
-  OnMain:
-    name: OnMain
+  Review:
+    name: Review
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,8 +25,6 @@ jobs:
           go version
       - name: Install gotagger
         run: |
-          # wget https://github.com/sassoftware/gotagger/releases/download/v0.9.0/gotagger_0.9.0_linux_386.tar.gz
-          # tar xvf gotagger_0.9.0_linux_386.tar.gz
           ./bin/gotagger --version
       - name: go:start
         run: yarn go:start
@@ -36,6 +34,4 @@ jobs:
         run: |
           yarn install
           yarn start
-      # - name: gotagger
-        # run: yarn run go:release
 
