--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -19,8 +19,8 @@ jobs:
           node-version: "lts/*"
       - name: Install Golang
         run: |
-          curl -OL https://golang.org/dl/go1.16.7.linux-amd64.tar.gz
-          sudo tar -C /usr/local -xvf go1.16.7.linux-amd64.tar.gz
+          curl -OL https://golang.org/dl/go1.16.7.linux-amd64.tar.gz --output-dir /tmp
+          sudo tar -C /usr/local -xvf /tmp/go1.16.7.linux-amd64.tar.gz
           export PATH=/usr/local/go/bin:$PATH
           go version
       - name: Install gotagger
