--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,32 +10,30 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Install Golang
+        run: ./bin/install-go.sh
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - name: Install Golang
-        run: |
-          curl -OL https://golang.org/dl/go1.16.7.linux-amd64.tar.gz --output-dir /tmp
-          sudo tar -C /usr/local -xvf /tmp/go1.16.7.linux-amd64.tar.gz
-          export PATH=/usr/local/go/bin:$PATH
-          go version
-      - name: Install gotagger
-        run: |
-          ./bin/gotagger --version
-      - name: go hello world
+      - name: Check
+        run: yarn test
+      - name: Run node
+        run: yarn install && yarn start
+      - name: Run go
         run: yarn go:start
-      - name: go:version
-        run: yarn go:version
-      - name: Run Node
+      - name: release
         run: |
-          yarn install
-          yarn start
-      - name: gotagger
-        run: |
-          git config --global user.name 'jonbri'
-          git config --global user.email 'jonbri@users.noreply.github.com'
-          yarn run go:release
+          git config --global user.name 'goatlang'
+          git config --global user.email 'goatlang@users.noreply.github.com'
+
+          yarn changelog
+          git add CHANGELOG.md
+
+          NEXT_VERSION=`./bin/gotagger`
+          git commit --allow-empty -m "release: v$NEXT_VERSION"
+
+          ./bin/gotagger -release -push
       - name: PR
         uses: peter-evans/create-pull-request@v5
 
