--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -13,25 +13,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Install Golang
+        run: ./bin/install-go.sh
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - name: Install Golang
-        run: |
-          curl -OL https://golang.org/dl/go1.16.7.linux-amd64.tar.gz --output-dir /tmp
-          sudo tar -C /usr/local -xvf /tmp/go1.16.7.linux-amd64.tar.gz
-          export PATH=/usr/local/go/bin:$PATH
-          go version
-      - name: Install gotagger
-        run: |
-          ./bin/gotagger --version
-      - name: go:start
+      - name: Check
+        run: yarn test
+      - name: Run node
+        run: yarn install && yarn start
+      - name: Run go
         run: yarn go:start
-      - name: go:version
-        run: yarn go:version
-      - name: Run Node
-        run: |
-          yarn install
-          yarn start
 
