--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -25,4 +25,6 @@ jobs:
         run: yarn install && yarn start
       - name: Run go
         run: yarn go:start
+      # - name: Publish
+      #   run: npm publish ./build
 
