--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -27,6 +27,10 @@ jobs:
         run: yarn go:start
       - name: Publish
         run: |
+          # if head commit is release
+
+          # if a pre-release commit
+
           ./bin/prerelease.sh
           # npm publish ./build
 
