--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -37,7 +37,8 @@ jobs:
             new_version=`./node_modules/.bin/semver $previous_version --increment prerelease --preid beta`
             echo $new_version
             npm version $new_version --commit-hooks false --git-tag-version false
-            ls -l
+            ls -l ./build
+            cat build/package.json
             # npm publish ./build
           fi
 
