--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Run go
         run: yarn start:go
       - name: Publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           # if head commit is release
           if [[ `git log -1 --pretty=%B` == release* ]]; then
