--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -29,6 +29,7 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           # if head commit is release
           if [[ `git log -1 --pretty=%B` == release* ]]; then
