--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
           git config --global user.name 'goatlang'
           git config --global user.email 'goatlang@users.noreply.github.com'
 
+          cat package.json
+
           new_version=`./bin/gotagger`
           echo "new_version: ${new_version}";
           cat package.json
