--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,18 @@ jobs:
           git config --global user.name 'goatlang'
           git config --global user.email 'goatlang@users.noreply.github.com'
 
+          echo "before"
           cat package.json
 
           new_version=`./bin/gotagger`
           echo "new_version: ${new_version}";
 
           npm version $new_version --commit-hooks false --git-tag-version false
+          echo "after"
+          cat package.json
+
+          npm version 0.0.1 --commit-hooks false --git-tag-version false
+          echo "back to 0.0.1"
           cat package.json
 
           yarn changelog
