--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
+          registry-url: 'https://registry.npmjs.org'
       - name: Check
-        run: yarn test
+        run: yarn install && yarn test
       - name: Run node
         run: yarn install && yarn start
       - name: Run go
