--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,13 @@ jobs:
           cat package.json
 
           git commit --allow-empty -m "release: $new_version"
-      - name: PR
-        uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: "release: ${new_version}"
+
+          branch_name="release-${new_version}"
+          git checkout --branch $branch_name
+          git push origin $branch_name
+
+      # - name: PR
+      #   uses: peter-evans/create-pull-request@v5
+      #   with:
+      #     commit-message: "release: ${new_version}"
 
