--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,11 +55,11 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: "release: ${new_version}"
-          title: "release: ${new_version}"
+          title: "release: ${steps.release.outputs.new_version}"
           body: |
             - item 0
             - item 1
 
             And a footer
-          branch: "${branch_name}"
+          branch: "${steps.release.outputs.new_version}"
 
