--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write \"**/*.{js,md}\"",
     "build": "cp index.js build",
     "next": "./bin/gotagger",
-    "changelog": "node ./bin/changelog.js"
+    "changelog": "./bin/generate-changelog.sh"
   },
   "license": "MIT",
   "bin": {
