--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -37,7 +37,7 @@ jobs:
             echo "Detected prerelease..."
             PREVIOUS_VERSION=`git describe --tags --abbrev=0`
             echo "PREVIOUS_VERSION: ${PREVIOUS_VERSION}"
-            NEW_VERSION=`./node_modules/.bin/semver $previous_version --increment prerelease --preid beta`
+            NEW_VERSION=`./node_modules/.bin/semver $PREVIOUS_VERSION --increment prerelease --preid beta`
           fi
 
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
