--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,35 +18,31 @@ jobs:
           node-version: "lts/*"
           registry-url: 'https://registry.npmjs.org'
       - name: Check
-        run: yarn install && yarn test
-      - name: Run node
-        run: yarn install && yarn start
-      - name: Run go
-        run: yarn start:go
-      - name: release
-        id: release
+        run: |
+          yarn install && yarn test
+          yarn test
+          yarn start
+          yarn start:go
+
+      - name: Determine next version
+        id: determine_next_version
+        run: |
+          NEW_VERSION=`./bin/gotagger`
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
+      - name: changelog
+        id: changelog
         run: |
           git config --global user.name 'goatlang'
           git config --global user.email 'goatlang@users.noreply.github.com'
-
           yarn changelog
-
-          NEW_VERSION=`./bin/gotagger`
-          branch_name="release-${NEW_VERSION}"
-
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
-          # TODO: does the branch actually matter?
-          echo "BRANCH_NAME=$branch_name" >> $GITHUB_OUTPUT
-          cat $GITHUB_OUTPUT
       - name: PR
         env:
-          NEW_VERSION: ${{ steps.release.outputs.NEW_VERSION }}
+          NEW_VERSION: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: >-
-            release: ${{ steps.release.outputs.NEW_VERSION }}
+            release: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
           title: >-
-            release: ${{ steps.release.outputs.NEW_VERSION }}
-
-# branch: ${{ steps.release.outputs.BRANCH_NAME }}
+            release: ${{ steps.determine_next_version.outputs.NEW_VERSION }}
 
