--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "url": "git+https://github.com/jonbri/goatlang.git"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "yarn run start:node && yarn run start:go",
+    "start:node": "node index.js",
     "start:go": "go run app/hello-world.go",
-    "test": "prettier --check \"**/*.{js,md}\" && go version && ./bin/gotagger --version && yarn next",
+    "test": "yarn test:node && yarn test:go",
+    "test:node": "yarn format:check",
+    "test:go": "go version && ./bin/gotagger --version && yarn gotagger",
     "format": "prettier --write \"**/*.{js,md}\"",
+    "format:check": "prettier --check \"**/*.{js,md}\"",
     "build": "cp index.js build",
-    "next": "./bin/gotagger",
+    "gotagger": "./bin/gotagger",
     "changelog": "node ./bin/changelog.js"
   },
   "license": "MIT",
